src/rules/snapshots/pg_migration_lint__rules__pgm004__tests__fires_on_existing_parent.snap
---
source: src/rules/pgm004.rs
expression: findings
---
- rule_id: PGM004
  severity: Critical
  message: "DETACH PARTITION on existing partitioned table 'measurements' without CONCURRENTLY acquires ACCESS EXCLUSIVE on the entire table, blocking all reads and writes. Use DETACH PARTITION ... CONCURRENTLY (PostgreSQL 14+)."
  file: migrations/002.sql
  start_line: 1
  end_line: 1
