src/rules/snapshots/pg_migration_lint__rules__pgm004__tests__no_pk_fires.snap
---
source: src/rules/pgm004.rs
assertion_line: 142
expression: findings
---
- rule_id: PGM004
  severity: Major
  message: "Table 'events' has no primary key."
  file: migrations/001.sql
  start_line: 1
  end_line: 1
